tests/syntactic/syntax5/syntax5.dl
// Check errors at the last location of inlcuded files
// are reported at correct location
.type Node

.decl reachable   (node1:Node, node2:Node) input
.decl same_clique (node1:Node, node2:Node) input
.decl edge        (node1:Node, node2:Node) input
+
